# HITCourseHunter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  hunter.py  prepare.py  pyproject.toml  requirements.txt  tools.py  web.py
.github/workflow/: release.yml
.github/workflows/: ci.yml  release.yml
static/css/: style.css
static/js/: main.js
templates/: base.html  config.html  course_selection.html  error.html  index.html  selected_courses.html
