[project]
name = "hitcoursehunter"
version = "0.1.0"
description = "A course selection assistant tool for HITSZ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "drissionpage>=4.1.0.15",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
