[project]
name = "hitcoursehunter"
version = "0.1.0"
description = "A course selection assistant tool for HITSZ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "drissionpage>=4.1.0.15",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pyright>=1.1.402", "ruff>=0.12.0"]
